tests/good/basic/in5.spl
int main()
{
    int x = 5;
    int y = 7;
    if (x < y)
    {
        printInt(x);
    }
    else
    {
        printInt(y);
    }
    return 0;
}
