tests/bad/basic/for2.spl
int main()
{
    for (i in 5)
        printInt(i);
    return 0;
}
